fixed word-wrap on elements

--- a/Styles/login.css
+++ b/Styles/login.css
@@ -169,6 +169,7 @@ input[type=text]:focus, input[type=password]:focus
     border-radius: 5px;
     border-style: inset;
     border-width: 1px;
+    white-space: pre-wrap;
 }
 .cen
 {
